# mmo

./: README.md  environment.yml
core/: __init__.py  config.py  cost.py
data/tpcds/: tpcds-create.sql  tpcds-index.sql
data/tpcds/cds/: q1.sql  q10.sql  q13.sql  q17.sql  q2.sql  q20.sql  q23.sql  q26.sql  q28.sql  q29.sql  q31.sql  q35.sql  q38.sql  q39.sql
data/tpch/: tpch-create.sql
data/tpch/ch/: q10.sql  q11.sql  q14.sql  q15.sql  q17.sql  q18.sql  q19.sql  q2.sql  q3.sql  q6.sql  q7.sql  q8.sql
mmo/: conf.ini  pyproject.toml  run.py
mmo/core/: models.py
mmo/data/tpcds/cds/: q14.sql  q18.sql  q19.sql  q21.sql  q22.sql  q24.sql  q27.sql  q3.sql  q30.sql  q32.sql  q33.sql  q34.sql  q37.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
mmo/data/tpch/: tpch-index.sql
mmo/data/tpch/ch/: q1.sql  q12.sql  q13.sql  q16.sql  q20.sql  q21.sql  q22.sql  q23.sql  q24.sql  q25.sql  q4.sql  q5.sql  q9.sql
mmo/solvers/: __init__.py  dp.py  heuristics.py  naive.py  registry.py
solvers/: baseline.py  sdp.py
utils/: __init__.py  display.py
