[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mvmo"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
mvmo = "run:main"

[tool.setuptools]
py-modules = ["run"]

[tool.setuptools.packages.find]
include = ["core*", "solvers*", "utils*"]

[tool.ruff]
line-length = 88
target-version = "py310"
